Initial working implementation

--- a/res/index.gohtml
+++ b/res/index.gohtml
@@ -5,9 +5,16 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>{{ .Title }}</title>
+
+    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-
+<section id="photos">
+    {{ range .Photos }}
+        <img src="{{ .ImgPath }}">
+    {{ end }}
+</section>
 </body>
 </html>
