--- a/res/index.gohtml
+++ b/res/index.gohtml
@@ -13,7 +13,7 @@
 <body>
 <section id="photos">
     {{ range .Photos }}
-        <img src="{{ .ImgPath }}" title="{{ .Title }}">
+        <img src="{{ .ThumbnailPath }}" title="{{ .Title }}">
     {{ end }}
 </section>
 </body>
