--- a/res/index.css
+++ b/res/index.css
@@ -3,53 +3,37 @@
 }
 
 #photos {
-    /* Prevent vertical gaps */
-    line-height: 0;
-
-    -webkit-column-count: 5;
-    -webkit-column-gap: 0px;
-    -moz-column-count: 5;
-    -moz-column-gap: 0px;
-    column-count: 5;
-    column-gap: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
 
 #photos img {
-    /* Just in case there are inline attributes */
-    width: 100% !important;
-    height: auto !important;
+    width: 25%;
 
     outline: 1px solid #000;
 }
 
 @media (max-width: 1200px) {
-    #photos {
-        -moz-column-count: 4;
-        -webkit-column-count: 4;
-        column-count: 4;
+    #photos img {
+        width: 25%;
     }
 }
 
 @media (max-width: 1000px) {
-    #photos {
-        -moz-column-count: 3;
-        -webkit-column-count: 3;
-        column-count: 3;
+    #photos img {
+        width: 33.33%;
     }
 }
 
 @media (max-width: 800px) {
-    #photos {
-        -moz-column-count: 2;
-        -webkit-column-count: 2;
-        column-count: 2;
+    #photos img {
+        width: 50%;
     }
 }
 
 @media (max-width: 400px) {
-    #photos {
-        -moz-column-count: 1;
-        -webkit-column-count: 1;
-        column-count: 1;
+    #photos img {
+        width: 100%;
     }
 }
