--- a/res/index.css
+++ b/res/index.css
@@ -14,6 +14,10 @@
     outline: 2px solid #000;
 }
 
+#photos img:hover {
+    cursor: pointer;
+}
+
 @media (max-width: 1400px) {
     #photos img {
         width: 25%;
