--- a/res/index.gohtml
+++ b/res/index.gohtml
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>{{ .Title }}</title>
+    <title>{{ .Config.Title }}</title>
 
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
