--- a/res/index.html.tmpl
+++ b/res/index.html.tmpl
@@ -8,6 +8,8 @@
 
     <title>{{ .Config.Title }}</title>
 
+    <link rel="icon" type="image/png" href="favicon.png" />
+
     <link rel="stylesheet" type="text/css" href="index.css">
 
     <!-- GLightbox -->
