--- a/res/index.css.tmpl
+++ b/res/index.css.tmpl
@@ -41,25 +41,41 @@
 }
 
 @media (max-width: 1400px) {
-    #photos a {
+    #photos .item {
         width: 25%;
+    }
+
+    #photos .period-separator {
+        height: 100px;
     }
 }
 
 @media (max-width: 1000px) {
-    #photos a {
+    #photos .item {
         width: 33.33%;
+    }
+
+    #photos .period-separator {
+        height: 100px;
     }
 }
 
 @media (max-width: 800px) {
-    #photos a {
+    #photos .item {
         width: 50%;
+    }
+
+    #photos .period-separator {
+        height: 100px;
     }
 }
 
 @media (max-width: 600px) {
-    #photos a {
+    #photos .item {
         width: 100%;
+    }
+
+    #photos .period-separator {
+        height: 100px;
     }
 }
