--- a/res/album.css.tmpl
+++ b/res/album.css.tmpl
@@ -8,60 +8,65 @@ body {
     background: {{ .Config.BgColor }};
 }
 
-#albums {
+#photos {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
 }
 
-#albums .album {
+#photos .item {
     width: 25%;
-    position: relative;
 
     outline: {{ .Config.Border }} solid {{ .Config.BgColor }};
 }
 
-#albums .album .title {
+#photos .period-separator {
     font-size: 1.9em;
     font-weight: bold;
+    text-align: center;
     color: {{ .Config.FontColor }};
-    font-family: 'Roboto', sans-serif;
 
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+
+    font-family: 'Roboto', sans-serif;
 }
 
-#albums img {
+#photos img {
     width: 100%;
     height: 100%;
 }
 
-#albums a:hover {
+#photos a:hover {
     cursor: pointer;
 }
 
 @media (max-width: 1400px) {
-    #albums .album {
+    #photos .item {
         width: 25%;
     }
 }
 
 @media (max-width: 1000px) {
-    #albums .album {
+    #photos .item {
         width: 33.33%;
     }
 }
 
 @media (max-width: 800px) {
-    #albums .album {
+    #photos .item {
         width: 50%;
     }
 }
 
 @media (max-width: 600px) {
-    #albums .album {
+    #photos .item {
         width: 100%;
+    }
+
+    #photos .period-separator {
+        height: 100px;
     }
 }
