--- a/res/index.html.tmpl
+++ b/res/index.html.tmpl
@@ -8,35 +8,18 @@
 
     <title>{{ .Config.Title }}</title>
 
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon.png"/>
 
     <link rel="stylesheet" type="text/css" href="index.css">
-
-    <!-- GLightbox -->
-    <link rel="stylesheet" href="glightbox.min.css"/>
-    <script src="glightbox.min.js"></script>
-
-    <script type="text/javascript">
-        document.addEventListener('DOMContentLoaded', function (event) {
-            const lightbox = GLightbox();
-        });
-    </script>
 </head>
 <body>
-<section id="photos">
-    {{ range $i, $photo := .Photos }}
-        {{ if $.Config.ShowSeparator }}
-            {{ if not (samePeriod $.Photos $i) }}
-                <div class="item period-separator">
-                    {{ $photo.ShootingDate.Month.String }} {{ $photo.ShootingDate.Year }}
-                </div>
-            {{ end }}
-        {{ end }}
-
-        <div class="item">
-            <a href="{{ $photo.PhotoPath }}" class="glightbox">
-                <img src="{{ $photo.ThumbnailPath }}"/>
+<section id="albums">
+    {{ range .Albums }}
+        <div class="album">
+            <a href="{{ .Name }}">
+                <img src="{{ .Name }}/{{ (index .Photos 0).ThumbnailPath }}"/>
             </a>
+            <div class="title">{{ .Name }}</div>
         </div>
     {{ end }}
 </section>
