--- a/res/index.css.tmpl
+++ b/res/index.css.tmpl
@@ -18,7 +18,10 @@ body {
     width: 25%;
     position: relative;
 
-    outline: {{ .Config.Border }} solid {{ .Config.BgColor }};
+    border: {{ .Config.Border }} solid {{ .Config.BgColor }};
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
 }
 
 #albums .album .title {
