Lowercase album name
Closes: #13

--- a/res/index.html.tmpl
+++ b/res/index.html.tmpl
@@ -19,7 +19,7 @@
             <a href="{{ .Name }}">
                 <img src="{{ .Name }}/{{ (index .Photos 0).ThumbnailPath }}"/>
             </a>
-            <div class="title">{{ .Name }}</div>
+            <div class="title">{{ .Name | capitalize }}</div>
         </div>
     {{ end }}
 </section>
