--- a/res/index.css.tmpl
+++ b/res/index.css.tmpl
@@ -39,6 +39,13 @@ body {
 #albums img {
     width: 100%;
     height: 100%;
+
+    filter: brightness(70%);
+}
+
+#albums img:hover {
+    transition-duration: 0.5s;
+    filter: brightness(100%);
 }
 
 #albums a:hover {
