--- a/res/album.html.tmpl
+++ b/res/album.html.tmpl
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>{{ .Album.Name | capitalize }}</title>
+    <title>{{ .Album.Name }}</title>
 
     <link rel="icon" type="image/png" href="/favicon.png"/>
 
