Harmonize configuration options
- s/show_separator/month_separator
- s/border/border_size
- s/album_sort/photos_sorting

Closes: #22

--- a/res/album.css.tmpl
+++ b/res/album.css.tmpl
@@ -17,7 +17,7 @@ body {
 #photos .item {
     width: 25%;
 
-    border: {{ .Config.Border }} solid {{ .Config.BgColor }};
+    border: {{ .Config.BorderSize }} solid {{ .Config.BgColor }};
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
