--- a/res/album.html.tmpl
+++ b/res/album.html.tmpl
@@ -8,13 +8,13 @@
 
     <title>{{ .Config.Title }} - {{ .Album.Name }}</title>
 
-    <link rel="icon" type="image/png" href="/favicon.png"/>
+    <link rel="icon" type="image/png" href="{{ $.Config.URL }}/favicon.png"/>
 
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="{{ $.Config.URL }}/{{ $.Album.Name }}/index.css">
 
     <!-- GLightbox -->
-    <link rel="stylesheet" href="/glightbox.min.css"/>
-    <script src="/glightbox.min.js"></script>
+    <link rel="stylesheet" href="{{ $.Config.URL }}/glightbox.min.css"/>
+    <script src="{{ $.Config.URL }}/glightbox.min.js"></script>
 
     <meta property="og:title" content="{{ .Config.Title }} - {{ .Album.Name }}"/>
     <meta property="og:type" content="website"/>
@@ -39,8 +39,8 @@
         {{ end }}
 
         <div class="item">
-            <a href="{{ $photo.PhotoPath }}" class="glightbox">
-                <img src="{{ $photo.ThumbnailPath }}"/>
+            <a href="{{ $.Config.URL }}/{{ $.Album.Name }}/{{ $photo.PhotoPath }}" class="glightbox">
+                <img src="{{ $.Config.URL }}/{{ $.Album.Name }}/{{ $photo.ThumbnailPath }}"/>
             </a>
         </div>
     {{ end }}
