--- a/res/album.css.tmpl
+++ b/res/album.css.tmpl
@@ -55,7 +55,7 @@ body {
 }
 
 @media (max-width: 1400px) {
-    #photos .item {
+    #photos {
         -webkit-column-count: 4;
         -moz-column-count: 4;
         column-count: 4;
@@ -63,7 +63,7 @@ body {
 }
 
 @media (max-width: 1000px) {
-    #photos .item {
+    #photos {
         -webkit-column-count: 3;
         -moz-column-count: 3;
         column-count: 3;
@@ -71,7 +71,7 @@ body {
 }
 
 @media (max-width: 800px) {
-    #photos .item {
+    #photos {
         -webkit-column-count: 2;
         -moz-column-count: 2;
         column-count: 2;
@@ -79,7 +79,7 @@ body {
 }
 
 @media (max-width: 600px) {
-    #photos .item {
+    #photos {
         -webkit-column-count: 1;
         -moz-column-count: 1;
         column-count: 1;
