Fix album title

--- a/res/index.css.tmpl
+++ b/res/index.css.tmpl
@@ -32,6 +32,7 @@ body {
 }
 
 #albums .album .title {
+    line-height: 40px;
     font-size: 1.9em;
     font-weight: bold;
     color: {{ .Config.FontColor }};
